# TaskMaster

./: Logbook 23 to 25.xlsx  README.md  package-lock.json  package.json
app/: llm_client.py  main.py  memory.py
prisma/: schema.prisma
public/: manifest.json
scratch/: list-models.js  manual-migrate.ts  test-gemini-env.js  test-gemini-lite.js  test-gemini-lite.mjs  test-gemini-stable.mjs  test-gemini.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/actions/: daily-quote.ts  events.ts  gamification.ts  habits.ts  history.ts  notes.ts  preparation.ts  prune.ts  relief.ts  smart-missions.ts  taskmaster.ts
src/app/calendar/: page.tsx
src/app/habits/: page.tsx
src/components/: GaseousDivider.tsx  HabitIconRender.tsx  HistoryList.tsx  RecapModal.tsx  TabularViewModal.tsx  character-stats-radar.tsx  class-watermark.tsx  clock.tsx  glass-card.tsx  loader.tsx  map-generator.tsx  mood-radar.tsx  navbar.tsx  swipe-nav.tsx  taskmaster-dialog.tsx  theme-provider.tsx
src/db/: index.ts  schema.ts
src/lib/: ai-utils.ts  constants.ts  prompts.ts  utils.ts  weather.ts
src/scripts/: check-prep.ts  check-stats-values.ts  check-values.ts  migrate-xp-v2.ts  migrate-xp.ts  prune-db.ts
taskmaster-backend/: Cargo.toml  README.md
taskmaster-backend/migrations/: 001_Initial.sql  002_Events_Diary.sql  003_Habits.sql  004_EventUpdates.sql  005_HabitRules.sql  006_BulletJournal.sql  007_GoogleAuth.sql  008_SyncIds.sql  20260406074744_create_tasks_table.sql
taskmaster-backend/src/: main.rs
taskmaster-frontend/: package-lock.json  package.json
(+20 files in other folders)
