[package]
name = "taskmaster-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
