[package]
name = "taskmaster-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde_json = "1.0"
serde = "1.0.228"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono", "json" ] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
oauth2 = { version = "4.3", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
